* added French user interface
* improved compVersion function to allow versions with more than 3 numbers
* added double humpty bumps with different half loop sizes
* added experimental turn perspective feature
* fixed bug where sequence text caret would jump to end when text editing double bump
* cleaned up config.js
* fixed scaling bug which appeared in Chrome 32

1.4.0
* added Belgian Aerobatic Club logo
* fixed missing flags in Firefox grid view print (Issue #107)
* added option to hide 'illegal' figures (and whole groups) in Chooser (Issue #102)
* added option for comment rotation by 90 degrees
* added roll comments. To prevent mistakes, original roll text (e.g. 3x4) can not be replaced (Issue #34)
* fixed bug where Unknown Figure Letter could be added to figure when no rules with these letters are active
* added automatic switching of ^ and > in Free Unknown figures when changing start axis (Issue #51)
* disabled options for changing figures with a Free Unknown Letter (Issue #71)
* changed default line style for repositioning figures: Bezier curve
* moved definition of Free Unknown figure letters to rules file (Issue #84)
* added warnings for missing figure letters where applicable
* moved definition of Super Families to rules file (Issue #100)
* added language chooser to settings
* added automatic saving of settings in localStorage
* changed demo menu to show submenu by year
* added sprintf for formatting output strings
* added handling of non-standard code 28 for 2x8 roll (Issue #121)
* added option for creating PNG images in "Save figs separate" (Issue #36)
* fixed incorrect position (in some cases) of sequence terminator line (Issue #3)
* changed onClick to eventListener to improve coding and enable Chrome app
* added pilot card print options
* added black & white printing/saving
* added saving sequence as PNG
* merged print and image save dialogs. Multiple forms can be saved in a single PNG or SVG
* added Australian Aerobatic Club logo